--- a/public/cats.html
+++ b/public/cats.html
@@ -14,7 +14,7 @@
 <body>
 
 <header id="header">
-  <h1 class="logo"><a href="index.html">Cat Cafe Mu.</a></h1>
+  <h1 class="logo"><a href="index.html"><img src="img/logo.gif"></a></h1>
   <ul class="schedule">
     <li class="scheduleItem">Open Time 11:00 - 22:00</li>
     <li class="scheduleItem">Close On Tuesday</li>
