--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 <body>
 
 <header id="header">
-  <h1 class="logo"><a href="#"><img src="img/logo.gif"></a></h1>
+  <h1 class="logo"><a href="#"><img src="img/logo.gif" alt="Cat Cafe Mu."></a></h1>
   <ul class="schedule">
     <li class="scheduleItem">Open Time 11:00 - 22:00</li>
     <li class="scheduleItem">Close On Tuesday</li>
@@ -30,24 +30,54 @@
 <main>
   <article class="contents">
     <header class="header">
-      <h1 id="hero"><div style="width: 100%; height: 300px; background: black;"></div></h1>
+      <h1 id="hero"><img src="img/indexHero.jpg" alt="Cat Cafe Mu."></h1>
     </header>
+    <section class="swiper">
+      <div class="swiper-container">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide"><img src="img/catImg_01.jpg" alt="猫"></div>
+          <div class="swiper-slide"><img src="img/catImg_02.jpg" alt="猫"></div>
+          <div class="swiper-slide"><img src="img/catImg_03.jpg" alt="猫"></div>
+          <div class="swiper-slide"><img src="img/catImg_04.jpg" alt="猫"></div>
+          <div class="swiper-slide"><img src="img/catImg_05.jpg" alt="猫"></div>
+          <div class="swiper-slide"><img src="img/catImg_06.jpg" alt="猫"></div>
+          <div class="swiper-slide"><img src="img/catImg_07.jpg" alt="猫"></div>
+          <div class="swiper-slide"><img src="img/catImg_08.jpg" alt="猫"></div>
+          <div class="swiper-slide"><img src="img/catImg_09.jpg" alt="猫"></div>
+          <div class="swiper-slide"><img src="img/catImg_10.jpg" alt="猫"></div>
+          <div class="swiper-slide"><img src="img/catImg_11.jpg" alt="猫"></div>
+          <div class="swiper-slide"><img src="img/catImg_12.jpg" alt="猫"></div>
+          <div class="swiper-slide"><img src="img/catImg_13.jpg" alt="猫"></div>
+          <div class="swiper-slide"><img src="img/catImg_14.jpg" alt="猫"></div>
+          <div class="swiper-slide"><img src="img/catImg_15.jpg" alt="猫"></div>
+          <div class="swiper-slide"><img src="img/catImg_16.jpg" alt="猫"></div>
+          <div class="swiper-slide"><img src="img/catImg_17.jpg" alt="猫"></div>
+          <div class="swiper-slide"><img src="img/catImg_18.jpg" alt="猫"></div>
+        </div>
+      </div>
+    </section>
     <section class="concept">
-      <h2 class="conceptTitle">コンセプトタイトル</h2>
-      <p class="conceptText">コンセプトテキスト</p>
+      <h2 class="conceptTitle">あなたのための心地よい空間</h2>
+      <p class="conceptText">忙しい日々のすき間に。のんびりしたい一日に。<br>ひとり気ままに。大切な人と。<br>Mu.は「あなたのための心地よい空間」をコンセプトに、お客様それぞれの過ごし方に合ったサービスをご提供いたします。初めての方でも気軽にお越しいただけますので、ぜひ一度お立ち寄りください。<br>可愛い猫たちとお待ちしています。</p>
     </section>
     <div class="pickup">
       <section class="pickupItem">
-        <h2 class="pickupTitle">System</h2>
-        <figure class="pickupImg"><div style="width: 300px; height: 200px; background: green;"></div></figure>
+        <a href="about.html#system">
+          <h2 class="pickupTitle">System</h2>
+          <figure class="pickupImg"><img src="img/pickupImg_01.jpg" alt="ご利用案内"></figure>
+        </a>
       </section>
       <section class="pickupItem">
-        <h2 class="pickupTitle">Cats</h2>
-        <figure class="pickupImg"><div style="width: 300px; height: 200px; background: green;"></div></figure>
+        <a href="cats.html">
+          <h2 class="pickupTitle">Cats</h2>
+          <figure class="pickupImg"><img src="img/pickupImg_02.jpg" alt="猫の紹介"></figure>
+        </a>
       </section>
       <section class="pickupItem">
-        <h2 class="pickupTitle">Menu</h2>
-        <figure class="pickupImg"><div style="width: 300px; height: 200px; background: green;"></div></figure>
+        <a href="menu.html">
+          <h2 class="pickupTitle">Menu</h2>
+          <figure class="pickupImg"><img src="img/pickupImg_03.jpg" alt="カフェメニュー"></figure>
+        </a>
       </section>
     </div>
     <section id="access">
