--- a/public/about.html
+++ b/public/about.html
@@ -14,7 +14,7 @@
 <body>
 
 <header id="header">
-  <h1 class="logo"><a href="index.html"><img src="img/logo.gif"></a></h1>
+  <h1 class="logo"><a href="index.html"><img src="img/logo.gif" alt="Cat Cafe Mu."></a></h1>
   <ul class="schedule">
     <li class="scheduleItem">Open Time 11:00 - 22:00</li>
     <li class="scheduleItem">Close On Tuesday</li>
@@ -29,30 +29,30 @@
 </header>
 <main>
   <article class="contents">
-    <header class="header">
-      <h1 class="hero"><div style="width: 100%; height: 200px; background: red;"></div></h1>
+    <header class="header aboutHeader">
+      <h1 class="hero">About<small>Mu.について / ご利用案内</small></h1>
     </header>
-    <p class="aboutText">アバウトテキストアバウトテキストアバウトテキストアバウトテキストアバウトテキストアバウトテキストアバウトテキストアバウトテキストアバウトテキストアバウトテキスト</p>
+    <p class="aboutText">忙しい日々のすき間に。のんびりしたい一日に。<br>ひとり気ままに。大切な人と。<br>Mu.は「あなたのための心地よい空間」をコンセプトに、お客様それぞれの過ごし方に合ったサービスをご提供いたします。初めての方でも気軽にお越しいただけますので、ぜひ一度お立ち寄りください。<br>可愛い猫たちとお待ちしています。</p>
     <section class="feature">
       <div class="row">
         <h2 class="featureTitle">Cats Room<small>猫の部屋</small></h2>
         <p class="featureText">猫部屋テキスト猫部屋テキスト猫部屋テキスト猫部屋テキスト猫部屋テキスト猫部屋テキスト猫部屋テキスト猫部屋テキスト猫部屋テキスト猫部屋テキスト</p>
       </div>
-      <figure class="featureImg"><div style="width: 420px; height: 300px; background: black;"></div></figure>
+      <figure class="featureImg"><img src="img/aboutImg_01.jpg" alt="猫の部屋"></figure>
     </section>
     <section class="feature">
       <div class="row">
-        <h2 class="featureTitle">Cafe Area<small>カフェエリア</small></h2>
+        <h2 class="featureTitle">Cafe<small>カフェエリア</small></h2>
         <p class="featureText">カフェエリアテキストカフェエリアテキストカフェエリアテキストカフェエリアテキストカフェエリアテキストカフェエリアテキストカフェエリアテキストカフェエリアテキストカフェエリアテキストカフェエリアテキスト</p>
       </div>
-      <figure class="featureImg"><div style="width: 420px; height: 300px; background: black;"></div></figure>
+      <figure class="featureImg"><img src="img/aboutImg_02.jpg" alt="カフェエリア"></figure>
     </section>
     <section class="feature">
       <div class="row">
-        <h2 class="featureTitle">Shop<small>猫雑貨</small></h2>
+        <h2 class="featureTitle">store<small>雑貨ストア</small></h2>
         <p class="featureText">ショップテキストショップテキストショップテキストショップテキストショップテキストショップテキストショップテキストショップテキストショップテキストショップテキスト</p>
       </div>
-      <figure class="featureImg"><div style="width: 420px; height: 300px; background: black;"></div></figure>
+      <figure class="featureImg"><img src="img/aboutImg_03.jpg" alt="雑貨ストア"></figure>
     </section>
     <section id="system">
       <h2 class="systemTitle">System</h2>
