--- a/public/cats.html
+++ b/public/cats.html
@@ -14,7 +14,7 @@
 <body>
 
 <header id="header">
-  <h1 class="logo"><a href="index.html"><img src="img/logo.gif"></a></h1>
+  <h1 class="logo"><a href="index.html"><img src="img/logo.gif" alt="Cat Cafe Mu."></a></h1>
   <ul class="schedule">
     <li class="scheduleItem">Open Time 11:00 - 22:00</li>
     <li class="scheduleItem">Close On Tuesday</li>
@@ -29,36 +29,63 @@
 </header>
 <main>
   <article class="contents">
-    <header class="header">
-      <h1 class="hero"><div style="width: 100%; height: 200px; background: blue;"></div></h1>
+    <header class="header catsHeader">
+      <h1 class="hero">Cats<small>猫の紹介</small></h1>
     </header>
     <div class="panels">
       <figure class="panel">
-        <div style="width: 300px; height: 300px; background: black;"></div><figcaption>パネル1</figcaption>
+        <img src="img/catImg_01.jpg" alt="だい"><figcaption>だい</figcaption>
       </figure>
       <figure class="panel">
-        <div style="width: 300px; height: 300px; background: black;"></div><figcaption>パネル2</figcaption>
+        <img src="img/catImg_02.jpg" alt="ナナ"><figcaption>ナナ</figcaption>
       </figure>
-            <figure class="panel">
-        <div style="width: 300px; height: 300px; background: black;"></div><figcaption>パネル3</figcaption>
+      <figure class="panel">
+        <img src="img/catImg_03.jpg" alt="茶々"><figcaption>茶々</figcaption>
       </figure>
-            <figure class="panel">
-        <div style="width: 300px; height: 300px; background: black;"></div><figcaption>パネル4</figcaption>
+      <figure class="panel">
+        <img src="img/catImg_04.jpg" alt="りき"><figcaption>りき</figcaption>
       </figure>
-            <figure class="panel">
-        <div style="width: 300px; height: 300px; background: black;"></div><figcaption>パネル5</figcaption>
+      <figure class="panel">
+        <img src="img/catImg_05.jpg" alt="ペティ"><figcaption>ペティ</figcaption>
       </figure>
-            <figure class="panel">
-        <div style="width: 300px; height: 300px; background: black;"></div><figcaption>パネル6</figcaption>
+      <figure class="panel">
+        <img src="img/catImg_06.jpg" alt="くろ"><figcaption>くろ</figcaption>
       </figure>
-            <figure class="panel">
-        <div style="width: 300px; height: 300px; background: black;"></div><figcaption>パネル7</figcaption>
+      <figure class="panel">
+        <img src="img/catImg_07.jpg" alt="カイ"><figcaption>カイ</figcaption>
       </figure>
-            <figure class="panel">
-        <div style="width: 300px; height: 300px; background: black;"></div><figcaption>パネル8</figcaption>
+      <figure class="panel">
+        <img src="img/catImg_08.jpg" alt="ぐん太"><figcaption>ぐん太</figcaption>
       </figure>
-            <figure class="panel">
-        <div style="width: 300px; height: 300px; background: black;"></div><figcaption>パネル9</figcaption>
+      <figure class="panel">
+        <img src="img/catImg_09.jpg" alt="アッシュ"><figcaption>アッシュ</figcaption>
+      </figure>
+      <figure class="panel">
+        <img src="img/catImg_10.jpg" alt="ミナ"><figcaption>ミナ</figcaption>
+      </figure>
+      <figure class="panel">
+        <img src="img/catImg_11.jpg" alt="タンタン"><figcaption>タンタン</figcaption>
+      </figure>
+      <figure class="panel">
+        <img src="img/catImg_12.jpg" alt="ハウ"><figcaption>ハウ</figcaption>
+      </figure>
+      <figure class="panel">
+        <img src="img/catImg_13.jpg" alt="ロジータ"><figcaption>ロジータ</figcaption>
+      </figure>
+      <figure class="panel">
+        <img src="img/catImg_14.jpg" alt="エイト"><figcaption>エイト</figcaption>
+      </figure>
+      <figure class="panel">
+        <img src="img/catImg_15.jpg" alt="おこめ"><figcaption>おこめ</figcaption>
+      </figure>
+      <figure class="panel">
+        <img src="img/catImg_16.jpg" alt="ジョン"><figcaption>ジョン</figcaption>
+      </figure>
+      <figure class="panel">
+        <img src="img/catImg_17.jpg" alt="レイ"><figcaption>レイ</figcaption>
+      </figure>
+      <figure class="panel">
+        <img src="img/catImg_18.jpg" alt="マイク"><figcaption>マイク</figcaption>
       </figure>
     </div>
   </article>
