--- a/public/menu.html
+++ b/public/menu.html
@@ -14,7 +14,7 @@
 <body>
 
 <header id="header">
-  <h1 class="logo"><a href="index.html"><img src="img/logo.gif"></a></h1>
+  <h1 class="logo"><a href="index.html"><img src="img/logo.gif" alt="Cat Cafe Mu."></a></h1>
   <ul class="schedule">
     <li class="scheduleItem">Open Time 11:00 - 22:00</li>
     <li class="scheduleItem">Close On Tuesday</li>
@@ -29,13 +29,13 @@
 </header>
 <main>
   <article class="contents">
-    <header class="header">
-      <h1 class="hero"><div style="width: 100%; height: 200px; background: pink;"></div></h1>
+    <header class="header menuHeader">
+      <h1 class="hero">Menu<small>カフェメニュー</small></h1>
     </header>
     <div class="menuList">
       <section class="menuItem">
         <h2 class="menuTitle">Coffee&amp;Tea</h2>
-        <figure class="menuImg"><div style="width: 420px; height: 240px; background: black;"></div></figure>
+        <figure class="menuImg"><img src="img/menuImg_01.jpg" alt="Coffee&Tea"></figure>
         <table>
           <tr>
             <td>コーヒー</td>
@@ -65,7 +65,7 @@
       </section>
       <section class="menuItem">
         <h2 class="menuTitle">Soft Drink</h2>
-        <figure class="menuImg"><div style="width: 420px; height: 240px; background: black;"></div></figure>
+        <figure class="menuImg"><img src="img/menuImg_02.jpg" alt="Soft Drink"></figure>
         <table>
           <tr>
             <td>ジュース</td>
@@ -95,7 +95,7 @@
       </section>
       <section class="menuItem">
         <h2 class="menuTitle">Sweets</h2>
-        <figure class="menuImg"><div style="width: 420px; height: 240px; background: black;"></div></figure>
+        <figure class="menuImg"><img src="img/menuImg_03.jpg" alt="Sweets"></figure>
         <table>
           <tr>
             <td>ケーキ</td>
@@ -125,7 +125,7 @@
       </section>
       <section class="menuItem">
         <h2 class="menuTitle">Food</h2>
-        <figure class="menuImg"><div style="width: 420px; height: 240px; background: black;"></div></figure>
+        <figure class="menuImg"><img src="img/menuImg_04.jpg" alt="Food"></figure>
         <table>
           <tr>
             <td>サンドウィッチ</td>
