--- a/public/index.html
+++ b/public/index.html
@@ -81,14 +81,16 @@
       </section>
     </div>
     <section id="access">
-      <h2 class="accessTitle">Access</h2>
-      <dl class="accessList">
-        <dt class="accessListTitle">Cat Cafe Mu.</dt>
-        <dd class="accessItem">〒000-0000</dd>
-        <dd class="accessItem">東京都立川市</dd>
-        <dd class="accessItem">立川駅 徒歩10分</dd>
-        <dd class="accessItem">TEL 000-0000-0000</dd>
-      </dl>
+      <div class="row">
+        <h2 class="accessTitle">Cat Cafe Mu. (ムー)</h2>
+        <dl class="accessList">
+          <dt>所在地</dt><dd>〒000-0000 東京都立川市</dd>
+          <dt>最寄り駅</dt><dd>立川駅 徒歩10分</dd>
+          <dt>電話番号</dt><dd>000-0000-0000</dd>
+          <dt>営業時間</dt><dd>11:00 - 22:00</dd>
+          <dt>定休日</dt><dd>毎週火曜日</dd>
+        </dl>
+      </div>
       <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.150480598886!2d139.41155211604166!3d35.69791438019039!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018e17afbcab5c9%3A0x973b8c5f29104899!2z56uL5bed6aeF!5e0!3m2!1sja!2sjp!4v1584786028209!5m2!1sja!2sjp" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </section>
   </article>
