fontawesome追加等footer修正

--- a/public/about.html
+++ b/public/about.html
@@ -81,12 +81,17 @@
 </main>
 <footer class="footer">
   <ul class="footerGnav">
-    <li class="footerGnavItem"><a href="#">トップページ</a></li>
-    <li class="footerGnavItem"><a href="about.html">Mu.について</a></li>
-    <li class="footerGnavItem"><a href="about.html#system">ご利用案内</a></li>
+    <li class="footerGnavItem"><a href="index.html">トップページ</a></li>
+    <li class="footerGnavItem"><a href="#">Mu.について</a></li>
+    <li class="footerGnavItem"><a href="#system">ご利用案内</a></li>
     <li class="footerGnavItem"><a href="cats.html">猫の紹介</a></li>
     <li class="footerGnavItem"><a href="menu.html">カフェメニュー</a></li>
-    <li class="footerGnavItem"><a href="#access">アクセス情報</a></li>
+    <li class="footerGnavItem"><a href="index.html#access">アクセス情報</a></li>
+  </ul>
+  <ul class="icons">
+    <li class="icon"><i class="fab fa-twitter-square fa-3x"></i></li>
+    <li class="icon"><i class="fab fa-instagram-square fa-3x"></i></li>
+    <li class="icon"><i class="fab fa-facebook-square fa-3x"></i></li>
   </ul>
   <p class="copyright">&copy; Cat Cafe Mu. All Rights Reserved.</p>
 </footer>
