--- a/public/index.html
+++ b/public/index.html
@@ -104,6 +104,11 @@
     <li class="footerGnavItem"><a href="menu.html">カフェメニュー</a></li>
     <li class="footerGnavItem"><a href="#access">アクセス情報</a></li>
   </ul>
+  <ul class="icons">
+    <li class="icon"><i class="fab fa-twitter-square fa-3x"></i></li>
+    <li class="icon"><i class="fab fa-instagram-square fa-3x"></i></li>
+    <li class="icon"><i class="fab fa-facebook-square fa-3x"></i></li>
+  </ul>
   <p class="copyright">&copy; Cat Cafe Mu. All Rights Reserved.</p>
 </footer>
 
