--- a/public/about.html
+++ b/public/about.html
@@ -81,17 +81,17 @@
 </main>
 <footer class="footer">
   <ul class="footerGnav">
-    <li class="footerGnavItem"><a href="index.html">トップページ</a></li>
-    <li class="footerGnavItem"><a href="#">Mu.について</a></li>
-    <li class="footerGnavItem"><a href="#system">ご利用案内</a></li>
-    <li class="footerGnavItem"><a href="cats.html">猫の紹介</a></li>
-    <li class="footerGnavItem"><a href="menu.html">カフェメニュー</a></li>
-    <li class="footerGnavItem"><a href="index.html#access">アクセス情報</a></li>
+    <li class="footerGnavItem"><a href="index.html"><span>トップページ</span></a></li>
+    <li class="footerGnavItem"><a href="#"><span>Mu.について</span></a></li>
+    <li class="footerGnavItem"><a href="#system"><span>ご利用案内</span></a></li>
+    <li class="footerGnavItem"><a href="cats.html"><span>猫の紹介</span></a></li>
+    <li class="footerGnavItem"><a href="menu.html"><span>カフェメニュー</span></a></li>
+    <li class="footerGnavItem"><a href="index.html#access"><span>アクセス情報</span></a></li>
   </ul>
   <ul class="icons">
-    <li class="icon"><i class="fab fa-twitter-square fa-3x"></i></li>
-    <li class="icon"><i class="fab fa-instagram-square fa-3x"></i></li>
-    <li class="icon"><i class="fab fa-facebook-square fa-3x"></i></li>
+    <li class="icon"><i class="fab fa-twitter-square fa-2x"></i></li>
+    <li class="icon"><i class="fab fa-instagram-square fa-2x"></i></li>
+    <li class="icon"><i class="fab fa-facebook-square fa-2x"></i></li>
   </ul>
   <p class="copyright">&copy; Cat Cafe Mu. All Rights Reserved.</p>
 </footer>
