--- a/public/index.html
+++ b/public/index.html
@@ -97,12 +97,12 @@
 </main>
 <footer class="footer">
   <ul class="footerGnav">
-    <li class="footerGnavItem"><a href="#">トップページ</a></li>
-    <li class="footerGnavItem"><a href="about.html">Mu.について</a></li>
-    <li class="footerGnavItem"><a href="about.html#system">ご利用案内</a></li>
-    <li class="footerGnavItem"><a href="cats.html">猫の紹介</a></li>
-    <li class="footerGnavItem"><a href="menu.html">カフェメニュー</a></li>
-    <li class="footerGnavItem"><a href="#access">アクセス情報</a></li>
+    <li class="footerGnavItem"><a href="#"><span>トップページ</span></a></li>
+    <li class="footerGnavItem"><a href="about.html"><span>Mu.について</span></a></li>
+    <li class="footerGnavItem"><a href="about.html#system"><span>ご利用案内</span></a></li>
+    <li class="footerGnavItem"><a href="cats.html"><span>猫の紹介</span></a></li>
+    <li class="footerGnavItem"><a href="menu.html"><span>カフェメニュー</span></a></li>
+    <li class="footerGnavItem"><a href="#access"><span>アクセス情報</span></a></li>
   </ul>
   <ul class="icons">
     <li class="icon"><i class="fab fa-twitter-square fa-2x"></i></li>
