--- a/public/cats.html
+++ b/public/cats.html
@@ -14,18 +14,20 @@
 <body>
 
 <header id="header">
-  <h1 class="logo"><a href="index.html"><img src="img/logo.gif" alt="Cat Cafe Mu."></a></h1>
-  <ul class="schedule">
-    <li class="scheduleItem">Open Time 11:00 - 22:00</li>
-    <li class="scheduleItem">Close On Tuesday</li>
-  </ul>
-  <ul class="gnav">
-    <li class="gnavItem"><a href="index.html">Home</a></li>
-    <li class="gnavItem"><a href="about.html">About</a></li>
-    <li class="gnavItem"><a href="#">Cats</a></li>
-    <li class="gnavItem"><a href="menu.html">Menu</a></li>
-    <li class="gnavItem"><a href="index.html#access">Access</a></li>
-  </ul>
+  <div id="headerInner">
+    <h1 class="logo"><a href="index.html"><img src="img/logo.gif" alt="Cat Cafe Mu."></a></h1>
+    <ul class="schedule">
+      <li class="scheduleItem">Open Time 11:00 - 22:00</li>
+      <li class="scheduleItem">Close On Tuesday</li>
+    </ul>
+    <ul class="gnav">
+      <li class="gnavItem"><a href="index.html">Home</a></li>
+      <li class="gnavItem"><a href="about.html">About</a></li>
+      <li class="gnavItem"><a href="#">Cats</a></li>
+      <li class="gnavItem"><a href="menu.html">Menu</a></li>
+      <li class="gnavItem"><a href="index.html#access">Access</a></li>
+    </ul>
+  </div>
 </header>
 <main>
   <article class="contents">
