--- a/public/about.html
+++ b/public/about.html
@@ -34,25 +34,25 @@
     <header class="header aboutHeader">
       <h1 class="hero">About<small>Mu.について / ご利用案内</small></h1>
     </header>
-    <p class="aboutText">忙しい日々のすき間に。のんびりしたい一日に。<br>ひとり気ままに。大切な人と。<br>Mu.は「あなたのための心地よい空間」をコンセプトに、お客様それぞれの過ごし方に合ったサービスをご提供いたします。初めての方でも気軽にお越しいただけますので、ぜひ一度お立ち寄りください。<br>可愛い猫たちとお待ちしています。</p>
+    <p class="aboutText">Mu.では、約20匹の様々な猫たちが自由気ままに過ごしています。<br>平日の空いた時間や予定のない休日など、お客様の都合に合わせてご利用いただけるシステムをリーズナブルなお値段でご案内していますので、猫たちとの癒しの空間を思う存分お楽しみください。</p>
     <section class="feature">
       <div class="row">
         <h2 class="featureTitle">Cats Room<small>猫の部屋</small></h2>
-        <p class="featureText">猫部屋テキスト猫部屋テキスト猫部屋テキスト猫部屋テキスト猫部屋テキスト猫部屋テキスト猫部屋テキスト猫部屋テキスト猫部屋テキスト猫部屋テキスト</p>
+        <p class="featureText">お客様と猫たちが心地よく過ごせるよう、温かみのある内装になっています。テーブル席だけでなく、ソファやハンモックも設けていますので、お好きな席でおくつろぎください。Wi-Fiも完備していますので、ご自由にご利用ください。Cats Roomでは、お飲物をご注文いただけます。</p>
       </div>
       <figure class="featureImg"><img src="img/aboutImg_01.jpg" alt="猫の部屋"></figure>
     </section>
     <section class="feature">
       <div class="row">
         <h2 class="featureTitle">Cafe<small>カフェエリア</small></h2>
-        <p class="featureText">カフェエリアテキストカフェエリアテキストカフェエリアテキストカフェエリアテキストカフェエリアテキストカフェエリアテキストカフェエリアテキストカフェエリアテキストカフェエリアテキストカフェエリアテキスト</p>
+        <p class="featureText">当店自慢のオリジナルブレンドコーヒーや旬の食材を取り入れたこだわりのメニューをご用意していますので、ぜひカフェをご利用ください。カフェのみのご利用の場合は入場料はかかりません。</p>
       </div>
       <figure class="featureImg"><img src="img/aboutImg_02.jpg" alt="カフェエリア"></figure>
     </section>
     <section class="feature">
       <div class="row">
         <h2 class="featureTitle">store<small>雑貨ストア</small></h2>
-        <p class="featureText">ショップテキストショップテキストショップテキストショップテキストショップテキストショップテキストショップテキストショップテキストショップテキストショップテキスト</p>
+        <p class="featureText">受付の横にて猫の雑貨の販売を行っています。普段使いできるものやアクセサリーなど、可愛い猫の雑貨を多数ご用意していますので、ぜひお買い求めください。</p>
       </div>
       <figure class="featureImg"><img src="img/aboutImg_03.jpg" alt="雑貨ストア"></figure>
     </section>
