--- a/public/menu.html
+++ b/public/menu.html
@@ -40,28 +40,40 @@
         <figure class="menuImg"><img src="img/menuImg_01.jpg" alt="Coffee&Tea"></figure>
         <table>
           <tr>
-            <td>コーヒー</td>
-            <td>¥200</td>
+            <td>Mu.ブレンドコーヒー</td>
+            <td>¥ 300</td>
           </tr>
           <tr>
-            <td>コーヒー</td>
-            <td>¥200</td>
+            <td>カフェオレ</td>
+            <td>¥ 300</td>
           </tr>
           <tr>
-            <td>コーヒー</td>
-            <td>¥200</td>
+            <td>カフェラテ</td>
+            <td>¥ 300</td>
           </tr>
           <tr>
-            <td>紅茶</td>
-            <td>¥200</td>
+            <td>カプチーノ</td>
+            <td>¥ 300</td>
           </tr>
           <tr>
-            <td>紅茶</td>
-            <td>¥200</td>
+            <td>エスプレッソ</td>
+            <td>¥ 300</td>
           </tr>
           <tr>
-            <td>紅茶</td>
-            <td>¥200</td>
+            <td>アメリカンコーヒー</td>
+            <td>¥ 300</td>
+          </tr>
+          <tr>
+            <td>ストレートティー</td>
+            <td>¥ 200</td>
+          </tr>
+          <tr>
+            <td>ミルクティー</td>
+            <td>¥ 200</td>
+          </tr>
+          <tr>
+            <td>アイスティー</td>
+            <td>¥ 200</td>
           </tr>
         </table>
       </section>
@@ -70,27 +82,31 @@
         <figure class="menuImg"><img src="img/menuImg_02.jpg" alt="Soft Drink"></figure>
         <table>
           <tr>
-            <td>ジュース</td>
+            <td>Mu.ミックスジュース</td>
+            <td>¥300</td>
+          </tr>
+          <tr>
+            <td>オレンジジュース</td>
+            <td>¥300</td>
+          </tr>
+          <tr>
+            <td>アップルジュース</td>
+            <td>¥300</td>
+          </tr>
+          <tr>
+            <td>コーラ</td>
             <td>¥200</td>
           </tr>
           <tr>
-            <td>ジュース</td>
+            <td>メロンソーダ</td>
             <td>¥200</td>
           </tr>
           <tr>
-            <td>ジュース</td>
+            <td>ジンジャエール</td>
             <td>¥200</td>
           </tr>
           <tr>
-            <td>ジュース</td>
-            <td>¥200</td>
-          </tr>
-          <tr>
-            <td>ジュース</td>
-            <td>¥200</td>
-          </tr>
-          <tr>
-            <td>ジュース</td>
+            <td>カルピス</td>
             <td>¥200</td>
           </tr>
         </table>
@@ -100,27 +116,47 @@
         <figure class="menuImg"><img src="img/menuImg_03.jpg" alt="Sweets"></figure>
         <table>
           <tr>
-            <td>ケーキ</td>
+            <td>フルーツパフェ</td>
+            <td>¥800</td>
+          </tr>
+          <tr>
+            <td>チョコレートパフェ</td>
+            <td>¥800</td>
+          </tr>
+          <tr>
+            <td>フルーツパンケーキ</td>
+            <td>¥800</td>
+          </tr>
+          <tr>
+            <td>シフォンケーキ</td>
+            <td>¥500</td>
+          </tr>
+          <tr>
+            <td>ティラミス</td>
+            <td>¥300</td>
+          </tr>
+          <tr>
+            <td>アップルパイ</td>
+            <td>¥300</td>
+          </tr>
+          <tr>
+            <td>マンゴータルト</td>
+            <td>¥300</td>
+          </tr>
+          <tr>
+            <td>バニラアイス</td>
             <td>¥200</td>
           </tr>
           <tr>
-            <td>ケーキ</td>
+            <td>チョコレートアイス</td>
             <td>¥200</td>
           </tr>
           <tr>
-            <td>ケーキ</td>
+            <td>コーヒーゼリー</td>
             <td>¥200</td>
           </tr>
           <tr>
-            <td>アイス</td>
-            <td>¥200</td>
-          </tr>
-          <tr>
-            <td>アイス</td>
-            <td>¥200</td>
-          </tr>
-          <tr>
-            <td>アイス</td>
+            <td>濃厚プリン</td>
             <td>¥200</td>
           </tr>
         </table>
@@ -130,28 +166,44 @@
         <figure class="menuImg"><img src="img/menuImg_04.jpg" alt="Food"></figure>
         <table>
           <tr>
-            <td>サンドウィッチ</td>
-            <td>¥200</td>
+            <td>ホットドック</td>
+            <td>¥500</td>
           </tr>
           <tr>
             <td>サンドウィッチ</td>
-            <td>¥200</td>
+            <td>¥500</td>
           </tr>
           <tr>
-            <td>サンドウィッチ</td>
-            <td>¥200</td>
+            <td>トマトパスタ</td>
+            <td>¥800</td>
           </tr>
           <tr>
-            <td>パスタ</td>
-            <td>¥200</td>
+            <td>たらこパスタ</td>
+            <td>¥800</td>
           </tr>
           <tr>
-            <td>パスタ</td>
-            <td>¥200</td>
+            <td>カレーライス</td>
+            <td>¥800</td>
           </tr>
           <tr>
-            <td>パスタ</td>
-            <td>¥200</td>
+            <td>オムライス</td>
+            <td>¥800</td>
+          </tr>
+          <tr>
+            <td>ハンバーグ</td>
+            <td>¥800</td>
+          </tr>
+          <tr>
+            <td>ドリア</td>
+            <td>¥800</td>
+          </tr>
+          <tr>
+            <td>エビピラフ</td>
+            <td>¥800</td>
+          </tr>
+          <tr>
+            <td>ガパオライス</td>
+            <td>¥800</td>
           </tr>
         </table>
       </section>
