レスポンシブに修正

--- a/public/about.html
+++ b/public/about.html
@@ -20,6 +20,9 @@
       <li class="scheduleItem">Open Time 11:00 - 22:00</li>
       <li class="scheduleItem">Close On Tuesday</li>
     </ul>
+    <input type="checkbox" id="menuButton"/>
+    <label for="menuButton" id="openLabel">Menu</label>
+    <label for="menuButton" id="closeLabel">Close</label>
     <ul class="gnav">
       <li class="gnavItem"><a href="index.html">Home</a></li>
       <li class="gnavItem"><a href="#">About</a></li>
@@ -63,7 +66,7 @@
           <th>&nbsp;</th>
           <th>1時間</th>
           <th>3時間</th>
-          <th>フリータイム</th>
+          <th>フリー</th>
         </tr>
         <tr>
           <th>平日</th>
@@ -72,7 +75,7 @@
           <td>¥2400</td>
         </tr>
         <tr>
-          <th>土・日・祝</th>
+          <th>休日</th>
           <td>¥800</td>
           <td>¥2000</td>
           <td>¥2800</td>
