--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,9 @@
       <li class="scheduleItem">Open Time 11:00 - 22:00</li>
       <li class="scheduleItem">Close On Tuesday</li>
     </ul>
+    <input type="checkbox" id="menuButton"/>
+    <label for="menuButton" id="openLabel">Menu</label>
+    <label for="menuButton" id="closeLabel">Close</label>
     <ul class="gnav">
       <li class="gnavItem"><a href="#">Home</a></li>
       <li class="gnavItem"><a href="about.html">About</a></li>
